k3d-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k3d-demo
  namespace: k3d-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: k3d-demo
---
apiVersion: v1
kind: Service
metadata:
  name: k3d-whoami
  namespace: k3d-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: k3d-whoami
