k3d-ingress.yml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: k3d-demo
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: nginx-tls
      hosts:
        - nginx.wuhanstudio.uk
    - secretName: whoami-tls
      hosts:
        - whoami.wuhanstudio.uk
  rules:
    - host: nginx.wuhanstudio.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3d-demo
                port: 
                  number: 80
    - host: whoami.wuhanstudio.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3d-whoami
                port:
                  number: 80
